RESOLVED FIXED80251
GraphicsContext3D.h should include RefCounted.h explicitly
https://bugs.webkit.org/show_bug.cgi?id=80251
Summary GraphicsContext3D.h should include RefCounted.h explicitly
Leo Yang
Reported 2012-03-05 00:50:23 PST
GraphicsContext3D.h is using RefCounted but including RefCounted.h indirectly. For some configuration, the indirect include may be failing. We should include the header explicitly anyway.
Attachments
Patch (2.07 KB, patch)
2012-03-05 01:41 PST, Leo Yang
rwlbuis: review+
Patch for landing (2.63 KB, patch)
2012-03-05 18:53 PST, Leo Yang
no flags
Leo Yang
Comment 1 2012-03-05 01:41:01 PST
Rob Buis
Comment 2 2012-03-05 04:28:01 PST
Comment on attachment 130080 [details] Patch This is touching cross-platform code! Can you give a concrete example where it fails to compile?
Leo Yang
Comment 3 2012-03-05 17:32:55 PST
(In reply to comment #2) > (From update of attachment 130080 [details]) > This is touching cross-platform code! Can you give a concrete example where it fails to compile? Build blackberry porting for x86 configuration. Note that the upstreamed IntSize.h (not including 2 unnecessary inclusion of PlatformString.h and CString.h which are in the internal version of IntSize.h) was used. This patch is to prepare for removing the 2 unnecessary inclusion in the internal IntSize.h. [ 9%] Building CXX object WebCore/CMakeFiles/webcore.dir/platform/graphics/skia/GraphicsContext3DSkia.cpp.o [ 9%] Building CXX object WebCore/CMakeFiles/webcore.dir/platform/graphics/skia/ImageBufferSkia.cpp.o [ 9%] Building CXX object WebCore/CMakeFiles/webcore.dir/platform/graphics/skia/NativeImageSkia.cpp.o [ 9%] Building CXX object WebCore/CMakeFiles/webcore.dir/platform/graphics/skia/PlatformContextSkia.cpp.o In file included from /home/leo/workspace/playbook/webkit/Source/WebCore/platform/graphics/skia/NativeImageSkia.cpp:36:0: /home/leo/workspace/playbook/webkit/Source/WebCore/platform/graphics/GraphicsContext3D.h:123:44: error: expected template-name before '<' token /home/leo/workspace/playbook/webkit/Source/WebCore/platform/graphics/GraphicsContext3D.h:123:44: error: expected '{' before '<' token /home/leo/workspace/playbook/webkit/Source/WebCore/platform/graphics/GraphicsContext3D.h:123:44: error: expected unqualified-id before '<' token /home/leo/workspace/playbook/webkit/Source/WebCore/platform/graphics/skia/NativeImageSkia.cpp:130:1: error: expected '}' at end of input cc: /opt/bbndk-2.0.0-beta1/host/linux/x86/usr/lib/gcc/i486-pc-nto-qnx6.5.0/4.6.2/cc1plus error 1 make[2]: *** [WebCore/CMakeFiles/webcore.dir/platform/graphics/skia/NativeImageSkia.cpp.o] Error 1
Rob Buis
Comment 4 2012-03-05 18:34:10 PST
Comment on attachment 130080 [details] Patch The change is good since GraphicsContext3D does derive from RefCounted and relying indirectly is not pretty. But please update the ChangeLog saying the indirection goes through Animation.h and why it does not work for us.
Leo Yang
Comment 5 2012-03-05 18:38:00 PST
(In reply to comment #4) > (From update of attachment 130080 [details]) > The change is good since GraphicsContext3D does derive from RefCounted and relying indirectly is not pretty. But please update the ChangeLog saying the indirection goes through Animation.h and why it does not work for us. Thanks. I'll explain more in the ChangeLog
Leo Yang
Comment 6 2012-03-05 18:53:45 PST
Created attachment 130264 [details] Patch for landing
WebKit Review Bot
Comment 7 2012-03-05 20:24:58 PST
Comment on attachment 130264 [details] Patch for landing Clearing flags on attachment: 130264 Committed r109841: <http://trac.webkit.org/changeset/109841>
Note You need to log in before you can comment on or make changes to this bug.